# projetCamera

./: .gitignore  .project  README.md  class.cpp  fonction.cpp  main.cpp
Other/: Face_Label_DATA.csv  NOTETOSELF
TCPClient/: .project
TCPClient/src/: CMakeLists.txt  class.cpp  class.h  fonction.cpp  fonction.h  main.cpp
TCPClient/src/html/: annotated.html  classResolution-members.html  classResolution.html  classResolutionFPS-members.html  classResolutionFPS.html  class_8h_source.html  classes.html  constante_8h_source.html  files.html  fonction_8h_source.html  index.html
TCPClient/src/html/search/: all_72.js  classes_72.js  search.js
TCPServeur/: .project
TCPServeur/src/: CMakeLists.txt  class.cpp  class.h  constante.cpp  constante.h  fonction.cpp  fonction.h  main.cpp
src/: CMakeLists.txt  class.cpp  class.h  constante.cpp  constante.h  fonction.cpp  fonction.h  main.cpp
