cmake_minimum_required (VERSION 2.6)
project (PJCamera)
add_executable(PJCamera main.cpp class.cpp constante.cpp fonction.cpp) 
find_package (OpenCV REQUIRED)
if (OpenCV_FOUND)
	include_directories(${OpenCV_INCLUDE_DIRS})
	target_link_libraries(PJCamera ${OpenCV_LIBRARIES})
else(OpenCV_FOUND)
	message(FATAL ERROR "Librarie OpenCV introuvable")
endif(OpenCV_FOUND)

